[package]
name = "env2config"
version = "1.0.0"
edition = "2024"
authors = ["Mohammad Gholami <gholami.mohammad.mgh@gmail.com>"]
description = "Load environment variables into structs"
license = "MIT"
repository = "https://github.com/gholami-mohammad/env2config-rs"

[dependencies]
env2config_derive = { path = "./env2config_derive" }
