[package]
name = "env2config_derive"
version = "1.0.0"
edition = "2024"
authors = ["Mohammad Gholami <gholami.mohammad.mgh@gmail.com>"]
description = "Load environment variables into structs"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1.0", features = [] }
